v.3.1.2
- fix for debug logging always being enabled
- better exit handling if Kodi isn't running

v.3.1.1
- added printing of any exception in a thread to assist with debugging

v.3.1.0
- added ability to pick sensors from GUI interface

v.3.0.4
- more error handling at quit

v.3.0.3
- better handling of SIGINT so service doesn't have to kill the process

v.3.0.2
- rewrote script to be more sane about dealing with Kodi quitting

v.3.0.1
- restructured script for best practice code layout

v.3.0.0
- updates to work in Buster (not backward compatible)

v.2.0.2
- changed location of default config file

v.2.0.1
- if sensor can return pressure trend use that instead of the calculated pressure trend

v.2.0.0
- changes to support Python 3.x
- added support for BME280 Temperature, Humidity, Pressure sensor
- added support for i2c ambient light sensor 
- now communicating data to Kodi via Websockets
- moved fetch of sunrise/sunset times to dedicated setting
- added option to have timed triggers run on weekdays or weekends
- added command line python script to change brightness
- added code to control SenseHat LED to provide some feedback
- pressure trend now calculated in script
- sensor checks and autodim checks now run on separate schedules
- autodim includes three levels: dark, dim, bright
- autodim now sends screen status change notice to Kodi immediately
- autodim only runs if Kodi is running
- SenseHat now returns lower of two temps from pressure and humidity sensors
- sends None to Kodi if sensor does not return data
- added logic to resend JSON call if no response is received from Kodi
- send screen status at websocket connection (so a Kodi restart restores state)
- timed triggered or manual display off cannot be overriden by light levels
  must turn back on manually or with another timed trigger
- removed separate log for sensor data
- functioning systemd service file included
- refactored settings so defaults are stored in code and can be overridden